fully add jspecify and nullaway. cleanup some code too